customized my app

--- a/templates/home.html
+++ b/templates/home.html
@@ -8,7 +8,9 @@
   <body>
     <div class="container">
       <h1>Hello World</h1>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla accumsan, metus ultrices eleifend gravida, nulla nunc varius lectus, nec rutrum justo nibh eu lectus. Ut vulputate semper dui. Fusce erat odio, sollicitudin vel erat vel, interdum mattis neque.</p>
+      <p>My name is Shancie Meikle, I'm pursuing a degree in Information Technology[ idk y].</p>
+      <p> This web dev 2 lab1.</p>
+      <p>Ohh.. I have a cat is name is Meelo.</p>
     </div>
   </body>
 </html>
